[package]
name = "lsp-tracing-layer"
description = "A tracing layer for tower-lsp"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/washanhanzi/lsp-tracing-layer"
homepage = "https://github.com/washanhanzi/lsp-tracing-layer"
license = "MIT"

[dependencies]
tokio = "1"
tower-lsp = { version = "0", features = ["proposed"] }
tracing = "0.1"
tracing-subscriber = "0.3"
